<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tip_calc3.TipCalc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello_statement"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/Hello_statement" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Hello_statement"
        android:text="@string/Bill_ammount_text"
        android:textSize="27sp"
        android:id="@+id/BillAmmo_text" />

    <EditText
        android:id="@+id/BillAmmo_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/Hello_statement"
        android:ems="8"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BillAmmo_text"
        android:text="@string/PartySize_text"
        android:textSize="30sp"
        android:id="@+id/PartySize_text" />

    <EditText
        android:id="@+id/PartySize_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/BillAmmo_input"
        android:ems="8"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textseekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PartySize_input"
        android:text="@string/textseekbar"
        android:gravity="center"
        android:textSize="35sp" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textseekbar"
        android:layout_centerHorizontal="true"
        android:id="@+id/seekbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splitbillText"
        android:id="@+id/splitbillText"
        android:layout_below="@id/seekbar"
        android:textSize="40sp" />

    <CheckBox
        android:id="@+id/Splitbill_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/splitbillText"
        android:layout_alignBottom="@+id/splitbillText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="34dp"
        android:scaleX="2"
        android:scaleY="2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Tipoutputtext"
        android:layout_below="@id/Splitbill_checkbox"
        android:text="@string/Tipoutputtext"
        android:textSize="26sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/YouOwe_Text"
        android:layout_below="@id/Tipoutputtext"
        android:text="@string/YouOwe_Text"
        android:textSize="26sp"/>

    <EditText
        android:id="@+id/TipAmmo_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/splitbillText"
        android:ems="8"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/Total_payment_output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/YouOwe_Text"
        android:layout_below="@id/TipAmmo_output"
        android:ems="8"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/Calculatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/YouOwe_Text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/Calculatebutton"
        android:onClick="Calculate"/>


</RelativeLayout>
